# lorddom_lgub_driver

./: CMakeLists.txt  README.md
.claude/skills/lgub-app/: SKILL.md
.claude/skills/lgub-build/: SKILL.md
.claude/skills/lgub-connection/: SKILL.md
.claude/skills/lgub-monitor/: SKILL.md
.claude/skills/lgub-sensor/: SKILL.md
docs/: COMMUNICATION_STACK.md  HOW_WE_BUILT_SDK_WITHOUT_DOCS.md  PROTOCOL.md  simulator_spec.md
examples/: read_distance.cpp
include/lorddom_lgub/: lgub_sensor.hpp  modbus_rtu.hpp  serial_port.hpp  types.hpp
scripts/: stopping_range_calculator.html
simulator/: README.md  index.html  setup_robot.sh
simulator/robot/: .gitignore  robot.urdf
src/: lgub_sensor.cpp  modbus_rtu.cpp  serial_port.cpp  types.cpp
test/: test_crc16.cpp
tools/: check_connection.sh  lgub_cli.cpp  lgub_probe.cpp  lgub_webapp.cpp  reconnect_demo.cpp
